clusters/mgmt/elasticsearch-kibana/generated/03b-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: tanzu-system-logging
  labels:
    app: elasticsearch
spec:
  rules:
  - host: elasticsearch.mgmt.tkg-vsp-lab.hyrulelab.com
    http:
      paths:
      - backend:
          serviceName: elasticsearch
          servicePort: 9200
