clusters/mgmt/elasticsearch-kibana/generated/04-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: tanzu-system-logging
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: tanzu-system-logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.2.0
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: tanzu-system-logging
  labels:
    app: kibana
spec:
  rules:
  - host: logs.mgmt.tkg-aws-lab.winterfell.live
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
